--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,15 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+    crossorigin="anonymous"></script>
+  <script type="text/javascript" src="app.bundle.js"></script>
+  <script type="text/javascript" src="static/scripts.js"></script>
   <title>Ziwei Chart Readings</title>
 </head>
 
 <body>
   <h1>Ziwei Chart Readings</h1>
-  <input aria-label="reports-input" type="file" id="reports-input" name="reports-input" />
-  <button aria-label="process-button" onclick="parseReportsInput()">Process</button>
-  <script type="text/javascript">
-    function parseReportsInput() {
-      try {
-        const file = document.getElementById('reports-inputs').files[0];
-        console.debug('invoke', file);
-      } catch (error) {
-        alert(error.message);
-      }
-    }
-  </script>
+  <input aria-label="reports-input" id="reports-input" name="reports-input" onchange="parseReportsInput()" type="file" />
+  <div id="output"></div>
 </body>
