--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
 
 <body>
   <h1>Ziwei Chart Readings</h1>
-  <input aria-label="reports-input" id="reports-input" name="reports-input" onchange="parseReportsInput()" type="file" />
+  <input aria-label="reports-input" id="reports-input" name="reports-input" onchange="handleInputFiles()" type="file" />
   <div id="report-container"></div>
 </body>
