Checkout template partials

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
   <script type="text/javascript" src="app.bundle.js"></script>
   <script type="text/javascript" src="scripts.js"></script>
   <script type="text/javascript" src="static/templates.handlebars"></script>
+  <script type="text/javascript">
+    $(document).ready(() => {
+      registerPartials();
+    });
+  </script>
   <title>Ziwei Chart Readings</title>
 </head>
 
