--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <script type="text/javascript">
     $(document).ready(() => {
       registerPartials();
+      loadFixtureData();
     });
   </script>
   <title>Ziwei Chart Readings</title>
