--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,5 @@
 <body>
   <h1>Ziwei Chart Readings</h1>
   <input aria-label="reports-input" id="reports-input" name="reports-input" onchange="handleInputFiles()" type="file" />
-  <div id="report-container"></div>
+  <div class="report" id="report-container"></div>
 </body>
