Add loading-ring as placeholder for report generating process

--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,12 @@
 <body>
   <h1>Ziwei Chart Readings</h1>
   <input aria-label="reports-input" id="reports-input" name="reports-input" onchange="handleInputFiles()" type="file" />
-  <div class="report" id="report-container"></div>
+  <div class="report" id="report-container">
+    <div class="loading-ring hidden">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
 </body>
