Add html_head template

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="no-print">
+  <div>
     <h1>Luận giải lá số Tử Vi</h1>
     <div class="file-input">
       <input id="reports-input" onchange="handleInputFiles()" type="file" />
