--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="scripts.js"></script>
-  <title>Ziwei Chart Readings</title>
+  <title>Phong Thuỷ Tài Vận</title>
 </head>
 
 <body>
